--- a/css/rafael.css
+++ b/css/rafael.css
@@ -776,6 +776,26 @@ html.mobile, .mobile body {
 
 
 
+/* 
+	LM: 02-20-13 [Added nice scroll bars for webkit browsers] 
+	See: http://css-tricks.com/custom-scrollbars-in-webkit/
+*/
+::-webkit-scrollbar {
+    width: 12px;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+	background-color: #88B541;
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background-color: #88B541;
+}
+
 
 /**
  * Non-semantic helper classes: please define your styles before this section.
